@@ -1,3 +1,12 @@
+2011-09-20  WOnder93  <omosnacek@gmail.com>
+
+	* AssemblyInfo.cs:
+	  
+
+	* Main.cs:
+	  Added error messages when session or game control is not
+	  available.
+
 2011-09-19  WOnder93  <omosnacek@gmail.com>
 
 	* AssemblyInfo.cs:
